login and signup

--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -2,3 +2,14 @@
     text-decoration: none;
     color: rgb(240, 235, 235);
 }
+
+.logout-button{
+    background-color: cornflowerblue;
+    border-radius: 5px;
+    color: cornsilk;
+    padding: 2px 10px;
+}
+
+.user-name{
+    color: rgb(88, 233, 165);
+}
