--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,10 +1,10 @@
 .banner-container{
     background-image: url(../../../images/banner.jpg);
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+    
     background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100vh;
+   
 }
 
 .banner-info{
@@ -18,3 +18,16 @@
     font-size: 60px;
     color: lightsalmon;
 }
+
+/* @media only screen and (max-width:688px){
+
+    .banner-container{
+        background-image: url(../../../images/banner.jpg);
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+} */
