--- a/src/Pages/NotFound/NotFound.css
+++ b/src/Pages/NotFound/NotFound.css
@@ -1,10 +1,9 @@
 .notfound-container{
-    width: 100%;
-    height: 100vh;
+    
     background-image: url(../../images/A-404-Page-Best-Practices-and-Design-Inspiration.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: 100% 100%;
+    height: 100vh;
 }
 
 .notfound-text{
