--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -1,2 +1,11 @@
 
- 
+ .common form {
+    display: flex;
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center;
+}
+.common form input{
+    margin-top: 10px;
+    width: 30%;
+}
